--- a/apps/bank/templates/bank.html
+++ b/apps/bank/templates/bank.html
@@ -48,7 +48,7 @@
 
 <!-- Bank options -->
 <div>
-    <a href="{% url 'transaction' %}">Transferir galeones</a>
+    <a href="{% url 'transactions' %}">Transferir galeones</a>
 
     <a href="{% url 'loan' %}">Pedir préstamo</a>
 </div>
