--- a/templates/components/modal/error_modal.html
+++ b/templates/components/modal/error_modal.html
@@ -1,13 +1,13 @@
-<div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="modal fade" id="errorModal" tabindex="-1" aria-labelledby="errorModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-            <div class="modal-header bg-success text-white">
-                <h5 class="modal-title" id="successModalLabel">Acción exitosa</h5>
+            <div class="modal-header bg-danger text-white">
+                <h5 class="modal-title" id="errorModalLabel">Error</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
             </div>
-            <div class="modal-body" id="successModalBody">
+            <div class="modal-body" id="errorModalBody">
             {% for message in messages %}
-            {% if "success" in message.tags %}
+            {% if "error" in message.tags %}
             {{ message }}
             {% endif %}
             {% endfor %}
@@ -22,7 +22,7 @@
 <script>
     document.addEventListener("DOMContentLoaded", function () {
     	const modal = new bootstrap.Modal(
-    		document.getElementById("successModal")
+    		document.getElementById("errorModal")
     	);
         modal.show();
     });
