--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
         <!-- Gringotts -->
         <div class="col-12 col-sm-6 col-md-4 mb-4">
             <div class="card h-100">
-                <img src="..." class="card-img-top" alt="..." />
+                <img src="{% static 'imgs/bank.jpg' %}" class="card-img-top" alt="..." />
                 <div class="card-body">
                     <h5 class="card-title">Banco Gringotts</h5>
                     <a href="{% url 'bank_view' %}" class="btn btn-primary w-100">Entrar</a>
@@ -37,7 +37,7 @@
         {% for store in stores %}
         <div class="col-12 col-sm-6 col-md-4 mb-4">
             <div class="card h-100">
-                <img src="..." class="card-img-top" alt="Imagen de {{store.name}}" />
+                <img src="{{ store.image_url }}" class="card-img-top" alt="Imagen de {{store.name}}" />
                 <div class="card-body">
                     <h5 class="card-title">{{store.name}}</h5>
                     <a href="{% url 'store_view' store.id %}" class="btn btn-primary w-100">Entrar</a>
