--- a/apps/stores/templates/gift.html
+++ b/apps/stores/templates/gift.html
@@ -16,12 +16,12 @@
         <input type="hidden" name="product_id" value="{{ product.id }}">
 
         <label for="receiver">Regalar a:</label>
-        <input list="accounts" name="sender_id" id="sender" required>
-        <datalist id="accounts">
+        <select name="receiver_id" id="receiver" class="form-select" required>
+            <option value="" disabled selected>-- Selecciona un destinatario --</option>
             {% for a in accounts %}
-            <option value="{{ a.id }}">{{ a.user.full_name }}</option>
+                <option value="{{ a.user.id }}">{{ a.user.full_name }}</option>
             {% endfor %}
-        </datalist>
+        </select>
 
         <button type="button"
                 class="btn btn-primary mt-3"
